--- a/po/en.po
+++ b/po/en.po
@@ -718,6 +718,7 @@ msgid "Scr&ipt:"
 msgstr "Scr&ipt:"
 
 #: dlls/comdlg32/comdlg32.rc:283 dlls/comdlg32/comdlg32.rc:288
+#: dlls/compstui/compstui.rc:33
 msgid "Color"
 msgstr "Colour"
 
@@ -1341,6 +1342,34 @@ msgstr "Options"
 #: dlls/compstui/compstui.rc:31
 msgid "Default"
 msgstr "Default"
+
+#: dlls/compstui/compstui.rc:35
+msgid "&Copy count"
+msgstr "&Copy count"
+
+#: dlls/compstui/compstui.rc:36
+msgid "Print on Both Sides"
+msgstr "Print on Both Sides"
+
+#: dlls/compstui/compstui.rc:32
+msgid "C&olor"
+msgstr "C&olour"
+
+#: dlls/compstui/compstui.rc:34
+msgid "Bla&ck && White"
+msgstr "Bla&ck && White"
+
+#: dlls/compstui/compstui.rc:37
+msgid "&None"
+msgstr "&None"
+
+#: dlls/compstui/compstui.rc:38 dlls/compstui/compstui.rc:41
+msgid "Flip on Shor&t Edge"
+msgstr "Flip on Shor&t Edge"
+
+#: dlls/compstui/compstui.rc:39 dlls/compstui/compstui.rc:40
+msgid "Flip on Long E&dge"
+msgstr "Flip on Long E&dge"
 
 #: dlls/credui/credui.rc:45
 msgid "&User name:"
