--- a/po/eo.po
+++ b/po/eo.po
@@ -720,6 +720,7 @@ msgid "Scr&ipt:"
 msgstr "&Skribmaniero:"
 
 #: dlls/comdlg32/comdlg32.rc:283 dlls/comdlg32/comdlg32.rc:288
+#: dlls/compstui/compstui.rc:33
 msgid "Color"
 msgstr "Koloro"
 
@@ -1350,6 +1351,43 @@ msgstr ""
 #| msgid "Defaults"
 msgid "Default"
 msgstr "Defaŭltojn"
+
+#: dlls/compstui/compstui.rc:35
+#, fuzzy
+#| msgid "&Copy"
+msgid "&Copy count"
+msgstr "&Kopiu"
+
+#: dlls/compstui/compstui.rc:36
+#, fuzzy
+#| msgid "Print to File"
+msgid "Print on Both Sides"
+msgstr "Eligi en dosieron"
+
+#: dlls/compstui/compstui.rc:32
+#, fuzzy
+#| msgid "C&olor:"
+msgid "C&olor"
+msgstr "&Koloro:"
+
+#: dlls/compstui/compstui.rc:34
+msgid "Bla&ck && White"
+msgstr ""
+
+#: dlls/compstui/compstui.rc:37
+#, fuzzy
+#| msgctxt "hotkey"
+#| msgid "None"
+msgid "&None"
+msgstr "Neniu"
+
+#: dlls/compstui/compstui.rc:38 dlls/compstui/compstui.rc:41
+msgid "Flip on Shor&t Edge"
+msgstr ""
+
+#: dlls/compstui/compstui.rc:39 dlls/compstui/compstui.rc:40
+msgid "Flip on Long E&dge"
+msgstr ""
 
 #: dlls/credui/credui.rc:45
 msgid "&User name:"
