--- a/po/he.po
+++ b/po/he.po
@@ -733,6 +733,7 @@ msgid "Scr&ipt:"
 msgstr "&כתב:"
 
 #: dlls/comdlg32/comdlg32.rc:283 dlls/comdlg32/comdlg32.rc:288
+#: dlls/compstui/compstui.rc:33
 msgid "Color"
 msgstr "צבע"
 
@@ -1367,6 +1368,42 @@ msgstr "אפשרויות"
 #, fuzzy
 msgid "Default"
 msgstr "הגדרת &בררות מחדל"
+
+#: dlls/compstui/compstui.rc:35
+#, fuzzy
+#| msgid "&Copy Background"
+msgid "&Copy count"
+msgstr "הע&תקת הרקע"
+
+#: dlls/compstui/compstui.rc:36
+#, fuzzy
+#| msgid "Print to File"
+msgid "Print on Both Sides"
+msgstr "הדפסה לקובץ"
+
+#: dlls/compstui/compstui.rc:32
+#, fuzzy
+msgid "C&olor"
+msgstr "&צבע"
+
+#: dlls/compstui/compstui.rc:34
+msgid "Bla&ck && White"
+msgstr ""
+
+#: dlls/compstui/compstui.rc:37
+#, fuzzy
+#| msgctxt "hotkey"
+#| msgid "None"
+msgid "&None"
+msgstr "ללא"
+
+#: dlls/compstui/compstui.rc:38 dlls/compstui/compstui.rc:41
+msgid "Flip on Shor&t Edge"
+msgstr ""
+
+#: dlls/compstui/compstui.rc:39 dlls/compstui/compstui.rc:40
+msgid "Flip on Long E&dge"
+msgstr ""
 
 #: dlls/credui/credui.rc:45
 msgid "&User name:"
