--- a/AUTHORS
+++ b/AUTHORS
@@ -712,6 +712,7 @@ Ilya Shpigor
 Indrek Altpere
 Ingmar Thiemann
 Ingo Schneider
+Isaac Marovitz
 Isabella Bosia
 Isira Seneviratne
 Ismael Barros
@@ -1585,6 +1586,7 @@ Sam Edwards
 Sami Aario
 Sami Nopanen
 Samir Al-Battran
+Sam Joan Roque-Worcel
 Samuele Guerrini
 Samuel Lidén Borell
 Sander van Leeuwen
