--- a/po/ast.po
+++ b/po/ast.po
@@ -14479,6 +14479,12 @@ msgstr ""
 "El númberu tien un formatu incorreutu. Ha ser\n"
 "decimal (12), hexadecimal (0x34) o octal (056).\n"
 
+#: programs/cmd/cmd.rc:411
+#, fuzzy
+#| msgid "Syntax error\n"
+msgid "Syntax error: unexpected %1\n"
+msgstr "Error de la sintaxis\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Tamañu del cursor"
