--- a/po/ca.po
+++ b/po/ca.po
@@ -14681,6 +14681,12 @@ msgstr ""
 "El nombre és mal format - ha de ser un de decimal (12)\n"
 " hexadecimal (0x34) o octal (056).\n"
 
+#: programs/cmd/cmd.rc:411
+#, fuzzy
+#| msgid "Syntax error\n"
+msgid "Syntax error: unexpected %1\n"
+msgstr "Error de sintaxi\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Mida de cursor"
