--- a/po/en.po
+++ b/po/en.po
@@ -14575,6 +14575,10 @@ msgstr ""
 "Badly formed number - must be one of decimal (12),\n"
 " hexadecimal (0x34) or octal (056).\n"
 
+#: programs/cmd/cmd.rc:411
+msgid "Syntax error: unexpected %1\n"
+msgstr "Syntax error: unexpected %1\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Cursor size"
