--- a/po/fr.po
+++ b/po/fr.po
@@ -15175,6 +15175,12 @@ msgstr ""
 "Nombre mal formé : doit être décimal (12),\n"
 " hexadécimal (0x34) ou octal (056).\n"
 
+#: programs/cmd/cmd.rc:411
+#, fuzzy
+#| msgid "Syntax error\n"
+msgid "Syntax error: unexpected %1\n"
+msgstr "Erreur de syntaxe\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Taille du curseur"
