--- a/po/he.po
+++ b/po/he.po
@@ -15339,6 +15339,12 @@ msgid ""
 " hexadecimal (0x34) or octal (056).\n"
 msgstr ""
 
+#: programs/cmd/cmd.rc:411
+#, fuzzy
+#| msgid "Syntax error"
+msgid "Syntax error: unexpected %1\n"
+msgstr "שגיאת תחביר"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "גודל הסמן"
