--- a/po/hr.po
+++ b/po/hr.po
@@ -15350,6 +15350,12 @@ msgid ""
 " hexadecimal (0x34) or octal (056).\n"
 msgstr ""
 
+#: programs/cmd/cmd.rc:411
+#, fuzzy
+#| msgid "Syntax error\n"
+msgid "Syntax error: unexpected %1\n"
+msgstr "Sintaksna greška\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Veličina pokazivača"
