--- a/po/pl.po
+++ b/po/pl.po
@@ -14615,6 +14615,12 @@ msgstr ""
 "Zły format liczbowy - musi on być jednym z formatów dziesiętnych (12),\n"
 " szesnastkowych (0x34) lub ósemkowych (056).\n"
 
+#: programs/cmd/cmd.rc:411
+#, fuzzy
+#| msgid "Syntax error\n"
+msgid "Syntax error: unexpected %1\n"
+msgstr "Błąd składni\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Rozmiar kursora"
