--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -14781,6 +14781,12 @@ msgstr ""
 "Número malformado - deve ser decimal (12),\n"
 " hexadecimal (0x34) ou octal (056).\n"
 
+#: programs/cmd/cmd.rc:411
+#, fuzzy
+#| msgid "Syntax error\n"
+msgid "Syntax error: unexpected %1\n"
+msgstr "Erro de sintaxe\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Cursor"
