--- a/po/si.po
+++ b/po/si.po
@@ -14677,6 +14677,12 @@ msgid ""
 " hexadecimal (0x34) or octal (056).\n"
 msgstr ""
 
+#: programs/cmd/cmd.rc:411
+#, fuzzy
+#| msgid "Syntax error\n"
+msgid "Syntax error: unexpected %1\n"
+msgstr "වාග් රීති දෝෂයක්\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "කර්සරය ප්රමාණය"
