--- a/po/sr_RS@cyrillic.po
+++ b/po/sr_RS@cyrillic.po
@@ -15125,6 +15125,12 @@ msgid ""
 " hexadecimal (0x34) or octal (056).\n"
 msgstr ""
 
+#: programs/cmd/cmd.rc:411
+#, fuzzy
+#| msgid "Syntax error"
+msgid "Syntax error: unexpected %1\n"
+msgstr "Грешка у синтакси"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr ""
