--- a/po/sr_RS@latin.po
+++ b/po/sr_RS@latin.po
@@ -15266,6 +15266,12 @@ msgid ""
 " hexadecimal (0x34) or octal (056).\n"
 msgstr ""
 
+#: programs/cmd/cmd.rc:411
+#, fuzzy
+#| msgid "Syntax error"
+msgid "Syntax error: unexpected %1\n"
+msgstr "Greška u sintaksi"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr ""
