cmd: Migrate IF/FOR instructions inside CMD_NODE.
Basically:
- IF and FOR command parsing in integrated into node_builder,
- CMD_NODE is no longer degenerated (and no longer use
  NULL CMD_COMMAND to mark end of block)
- lexer evolves to delegate a bunch of things to node_builder
  (esp. command nesting...)

Wine-Bug: https://bugs.winehq.org/show_bug.cgi?id=53190
Wine-Bug: https://bugs.winehq.org/show_bug.cgi?id=50132
Wine-Bug: https://bugs.winehq.org/show_bug.cgi?id=44063
Signed-off-by: Eric Pouech <epouech@codeweavers.com>

--- a/po/ar.po
+++ b/po/ar.po
@@ -15896,6 +15896,12 @@ msgstr "خطأ بنيوي\n"
 msgid "End of line"
 msgstr "نهاية الملف.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "نهاية الملف.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "حجم المؤشر"
