--- a/po/bg.po
+++ b/po/bg.po
@@ -14584,6 +14584,11 @@ msgstr ""
 msgid "End of line"
 msgstr "Добави към от&метките..."
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+msgid "End of file"
+msgstr "Добави към от&метките..."
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr ""
