--- a/po/cs.po
+++ b/po/cs.po
@@ -15410,6 +15410,12 @@ msgstr "Chyba syntaxe\n"
 msgid "End of line"
 msgstr "Konec souboru.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Konec souboru.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Velikost kurzoru"
