--- a/po/da.po
+++ b/po/da.po
@@ -15805,6 +15805,12 @@ msgstr "Syntaks fejl\n"
 msgid "End of line"
 msgstr "Slutningen af filen.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Slutningen af filen.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Markør størrelse"
