--- a/po/es.po
+++ b/po/es.po
@@ -15270,6 +15270,12 @@ msgstr "Error de sintaxis\n"
 msgid "End of line"
 msgstr "Fin del archivo.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Fin del archivo.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Tamaño del cursor"
