--- a/po/fi.po
+++ b/po/fi.po
@@ -14567,6 +14567,12 @@ msgstr "Syntaksivirhe\n"
 msgid "End of line"
 msgstr "Tiedoston loppu.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Tiedoston loppu.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Kursorin koko"
