--- a/po/fr.po
+++ b/po/fr.po
@@ -15187,6 +15187,12 @@ msgstr "Erreur de syntaxe\n"
 msgid "End of line"
 msgstr "Fin de fichier atteinte.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Fin de fichier atteinte.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Taille du curseur"
