--- a/po/hr.po
+++ b/po/hr.po
@@ -15362,6 +15362,12 @@ msgstr "Sintaksna greška\n"
 msgid "End of line"
 msgstr "Kraj datoteke.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Kraj datoteke.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Veličina pokazivača"
