--- a/po/hu.po
+++ b/po/hu.po
@@ -15796,6 +15796,12 @@ msgstr "Szintaktikai hiba\n"
 msgid "End of line"
 msgstr "Fájl vége.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Fájl vége.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Kurzor mérete"
