--- a/po/ko.po
+++ b/po/ko.po
@@ -14544,6 +14544,12 @@ msgstr "문법 오류\n"
 msgid "End of line"
 msgstr "파일 끝.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "파일 끝.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "커서 크기"
