--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -15392,6 +15392,12 @@ msgstr "Syntaksfeil\n"
 msgid "End of line"
 msgstr "Enden av filen.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Enden av filen.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Pekerstørrelse"
