--- a/po/nl.po
+++ b/po/nl.po
@@ -14642,6 +14642,12 @@ msgstr "Formuleringsfout\n"
 msgid "End of line"
 msgstr "Einde van bestand.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Einde van bestand.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Cursorgrootte"
