--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -15567,6 +15567,12 @@ msgstr "Erro de sintaxe\n"
 msgid "End of line"
 msgstr "Fim de ficheiro.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Fim de ficheiro.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Tamanho do Cursor"
