--- a/po/ru.po
+++ b/po/ru.po
@@ -15024,6 +15024,12 @@ msgstr "Синтаксическая ошибка\n"
 msgid "End of line"
 msgstr "Достигнут конец файла.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Достигнут конец файла.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Размер курсора"
