--- a/po/si.po
+++ b/po/si.po
@@ -14689,6 +14689,12 @@ msgstr "වාග් රීති දෝෂයක්\n"
 msgid "End of line"
 msgstr "ගොනුවේ අවසානය.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "ගොනුවේ අවසානය.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "කර්සරය ප්රමාණය"
