--- a/po/sk.po
+++ b/po/sk.po
@@ -15106,6 +15106,12 @@ msgstr ""
 msgid "End of line"
 msgstr "Koniec súboru.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Koniec súboru.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr ""
