--- a/po/sv.po
+++ b/po/sv.po
@@ -15521,6 +15521,12 @@ msgstr "Syntaxfel\n"
 msgid "End of line"
 msgstr "Filslut.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Filslut.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Markörstorlek"
