--- a/po/th.po
+++ b/po/th.po
@@ -14616,6 +14616,11 @@ msgstr ""
 msgid "End of line"
 msgstr "ลบ\tDel"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+msgid "End of file"
+msgstr "ลบ\tDel"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr ""
