--- a/po/tr.po
+++ b/po/tr.po
@@ -14613,6 +14613,12 @@ msgstr "Sözdizimi hatası\n"
 msgid "End of line"
 msgstr "Dosya sonu.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Dosya sonu.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "İmleç boyutu"
