--- a/po/uk.po
+++ b/po/uk.po
@@ -14886,6 +14886,12 @@ msgstr "Синтаксична помилка\n"
 msgid "End of line"
 msgstr "Кінець файлу.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Кінець файлу.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Розмір курсора"
