--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -14381,6 +14381,12 @@ msgstr "语法错误\n"
 msgid "End of line"
 msgstr "文件尾。\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "文件尾。\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "光标尺寸"
