--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -14447,6 +14447,12 @@ msgstr "語法錯誤\n"
 msgid "End of line"
 msgstr "檔案結尾。\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "檔案結尾。\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "游標大小"
