--- a/po/de.po
+++ b/po/de.po
@@ -14675,6 +14675,12 @@ msgstr "Syntaxfehler\n"
 msgid "End of line"
 msgstr "Ende der Datei.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Ende der Datei.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Cursorgröße"
