--- a/po/lt.po
+++ b/po/lt.po
@@ -14589,6 +14589,12 @@ msgstr "Sintaksės klaida: netikėtas %1\n"
 msgid "End of line"
 msgstr "Eilutės pabaiga"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Failo pabaiga.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Žymeklio dydis"
