--- a/po/ro.po
+++ b/po/ro.po
@@ -15641,6 +15641,12 @@ msgstr "Eroare de sintaxă\n"
 msgid "End of line"
 msgstr "Sfârșit de fișier.\n"
 
+#: programs/cmd/cmd.rc:413
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of file"
+msgstr "Sfârșit de fișier.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Dimensiune cursor"
