--- a/AUTHORS
+++ b/AUTHORS
@@ -381,6 +381,7 @@ Dan Kegel
 Dan Langlois
 Dan Scott
 Dan Wolf
+Danyil Blyschak
 Darryl Dixon
 Dave Belanger
 Dave Hawkes
@@ -610,6 +611,7 @@ Giuseppe Bilotta
 Gleb Smirnoff
 Glenn Schrader
 Glenn Wurster
+Gopal Prasad
 Goran Thyni
 Gordon Chaffee
 G. Paul Ziemba
@@ -1013,6 +1015,7 @@ Kira Backes
 Kirill Erofeev
 Kirill K. Smirnov
 Kirill Smelkov
+Kirill Zhumarin
 Kjell Rune Skaaraas
 Klaas van Gend
 Klaus Layer
@@ -1208,6 +1211,7 @@ Micah N Gorrell
 Michael Abbott
 Michael Abd-El-Malek
 Michael Beach
+Michael Bond
 Michael Cardenas
 Michael C. Maggio
 Michael Cronenworth
@@ -1420,6 +1424,7 @@ Peter Hawkins
 Peter Hedlund
 Peter Hunnisett
 Peter Ivanyi
+Peter Johnson
 Peter Lemenkov
 Peter MacDonald
 Peter Mladek
@@ -1553,6 +1558,7 @@ Roger Koot
 Roger Olson
 Roger Zoellner
 Rok Mandeljc
+Roland Häder
 Rolf Kalbermatter
 Romain Iehl
 Roman Dadkov
