maintainers: Change the full form of my name.
And update to a more reliable email address.

--- a/AUTHORS
+++ b/AUTHORS
@@ -490,6 +490,7 @@ Ekaterine Papava
 Elias Benali
 Elias Ross
 Elie Morisse
+Elizabeth Figura
 Emilio Cobos Álvarez
 Emmanuel Maillard
 Enol Puente
@@ -1896,7 +1897,6 @@ Zachary Brown
 Zach Goldberg
 Zach Gorman
 Zach Smith
-Zebediah Figura
 Zhangrong Huang
 Zhang Shuai
 Zhan Jianyu
