po: Add a missing \t in the Simplified Chinese translation.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -14162,7 +14162,7 @@ msgstr ""
 "FTYPE\t\t显示或更改文件类型关联的打开命令\n"
 "HELP\t\t显示某个主题的帮助信息概览\n"
 "MD (MKDIR)\t创建子目录\n"
-"MKLINK\t创建符号链接\n"
+"MKLINK\t\t创建符号链接\n"
 "MORE\t\t分页显示输出\n"
 "MOVE\t\t移动一个或多个文件，或整个目录树\n"
 "PATH\t\t设置或显示命令搜索路径\n"
