--- a/AUTHORS
+++ b/AUTHORS
@@ -562,6 +562,7 @@ Florian Tobias Schandinat
 Florian Will
 Floris Renaud
 Fons Botman
+Fotios Valasiadis
 Francesco Di Punzio
 Francesco Noferi
 Francis Beaudet
@@ -688,6 +689,7 @@ Hiroshi Miura
 Hiroshi Tanabe
 Hleb Valoska
 Hongbo Ni
+Hongxin Zhao
 Howard Abrams
 Howell Tam
 Hua Meng
