--- a/AUTHORS
+++ b/AUTHORS
@@ -567,6 +567,7 @@ Francesco Di Punzio
 Francesco Noferi
 Francis Beaudet
 Francisco Casas
+Francis De Brabandere
 Francois Boisvert
 François Dorin
 François Gouget
