--- a/AUTHORS
+++ b/AUTHORS
@@ -18,6 +18,7 @@ Adam Gashlin
 Adam Gundy
 Adam Martinson
 Adam Petaccia
+Adam Rehn
 Adam Sacarny
 Adam Stachowicz
 Adam Stoelting
@@ -198,6 +199,7 @@ Benjamin Arai
 Benjamin Cutler
 Benjamin Hodgetts
 Benjamin Kramer
+Benjamin Mayes
 Ben Klein
 Ben Mayhew
 Ben Peddell
@@ -740,6 +742,7 @@ Jacek Caban
 Jacek Konieczny
 Jacob Czekalla
 Jacob Lifshay
+Jacob Pfeiffer
 Jaco Greeff
 Jactry Zeng
 Jaekil Lee
@@ -1091,6 +1094,7 @@ Louis Lenders
 Louis Philippe Gagnon
 L. Rahyen
 Luca Bennati
+Lucas Chollet
 Lucas Fialho Zawacki
 Lucian Poston
 Luc Tourangeau
@@ -1641,6 +1645,7 @@ Shanren Zhou
 Shaun Morris
 Shaun Ren
 Shawn M. Chapla
+Shengdun Wang
 Sheri Steeves
 Shi Quan He
 Shuai Meng
