--- a/po/lt.po
+++ b/po/lt.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Wine\n"
 "Report-Msgid-Bugs-To: https://bugs.winehq.org\n"
 "POT-Creation-Date: N/A\n"
-"PO-Revision-Date: 2024-04-03 22:59+0300\n"
+"PO-Revision-Date: 2024-06-25 00:23+0300\n"
 "Last-Translator: Aurimas Fišeras <aurimas@members.fsf.org>\n"
 "Language-Team: Lithuanian <komp_lt@konf.lt>\n"
 "Language: lt\n"
@@ -14582,10 +14582,8 @@ msgstr ""
 " šešioliktainis (0x34) arba aštuntainis (056).\n"
 
 #: programs/cmd/cmd.rc:411
-#, fuzzy
-#| msgid "Syntax error\n"
 msgid "Syntax error: unexpected %1\n"
-msgstr "Sintaksės klaida\n"
+msgstr "Sintaksės klaida: netikėtas %1\n"
 
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
