cmd: Let token errors be tranlatable.
Signed-off-by: Eric Pouech <epouech@codeweavers.com>

--- a/po/bg.po
+++ b/po/bg.po
@@ -14579,6 +14579,11 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr ""
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+msgid "End of line"
+msgstr "Добави към от&метките..."
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr ""
