--- a/po/hu.po
+++ b/po/hu.po
@@ -15790,6 +15790,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Szintaktikai hiba\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Fájl vége.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Kurzor mérete"
