--- a/po/si.po
+++ b/po/si.po
@@ -14683,6 +14683,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "වාග් රීති දෝෂයක්\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "ගොනුවේ අවසානය.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "කර්සරය ප්රමාණය"
