--- a/po/ta.po
+++ b/po/ta.po
@@ -14048,6 +14048,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr ""
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "Signing Time"
+msgid "End of line"
+msgstr "கையொப்பமிடும் நேரம்"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr ""
