--- a/po/uk.po
+++ b/po/uk.po
@@ -14880,6 +14880,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Синтаксична помилка\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Кінець файлу.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Розмір курсора"
