--- a/po/ar.po
+++ b/po/ar.po
@@ -15890,6 +15890,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "خطأ بنيوي\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "نهاية الملف.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "حجم المؤشر"
