--- a/po/ast.po
+++ b/po/ast.po
@@ -14485,6 +14485,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Error de la sintaxis\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Fin del ficheru.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Tamañu del cursor"
