--- a/po/ca.po
+++ b/po/ca.po
@@ -14687,6 +14687,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Error de sintaxi\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "S'ha acabat el fitxer.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Mida de cursor"
