--- a/po/cs.po
+++ b/po/cs.po
@@ -15404,6 +15404,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Chyba syntaxe\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Konec souboru.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Velikost kurzoru"
