--- a/po/da.po
+++ b/po/da.po
@@ -15799,6 +15799,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Syntaks fejl\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Slutningen af filen.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Markør størrelse"
