--- a/po/de.po
+++ b/po/de.po
@@ -14669,6 +14669,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Syntaxfehler\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Ende der Datei.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Cursorgröße"
