--- a/po/en.po
+++ b/po/en.po
@@ -14579,6 +14579,10 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Syntax error: unexpected %1\n"
 
+#: programs/cmd/cmd.rc:412
+msgid "End of line"
+msgstr "End of line"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Cursor size"
