--- a/po/eo.po
+++ b/po/eo.po
@@ -14944,6 +14944,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr ""
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "&Standard bar"
+msgid "End of line"
+msgstr "&Ordinara zono"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Kursor-grando"
