--- a/po/fr.po
+++ b/po/fr.po
@@ -15181,6 +15181,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Erreur de syntaxe\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Fin de fichier atteinte.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Taille du curseur"
