--- a/po/he.po
+++ b/po/he.po
@@ -15345,6 +15345,11 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "שגיאת תחביר"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+msgid "End of line"
+msgstr "&איגוד לקובץ..."
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "גודל הסמן"
