--- a/po/hr.po
+++ b/po/hr.po
@@ -15356,6 +15356,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Sintaksna greška\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Kraj datoteke.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Veličina pokazivača"
