--- a/po/it.po
+++ b/po/it.po
@@ -15866,6 +15866,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Errore di sintassi\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Fine del file.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Dimensione del cursore"
