--- a/po/ka.po
+++ b/po/ka.po
@@ -14184,6 +14184,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "სინტაქსური შეცდომა\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "ფაილის დასასრული.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "კურსორის ზომა"
