--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -14787,6 +14787,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Erro de sintaxe\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Fim do arquivo.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Cursor"
