--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -15561,6 +15561,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Erro de sintaxe\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Fim de ficheiro.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Tamanho do Cursor"
