--- a/po/ro.po
+++ b/po/ro.po
@@ -15635,6 +15635,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Eroare de sintaxă\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Sfârșit de fișier.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Dimensiune cursor"
