--- a/po/sl.po
+++ b/po/sl.po
@@ -15820,6 +15820,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Napaka skladnje\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Konec datoteke.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Velikost kazalca"
