--- a/po/sr_RS@cyrillic.po
+++ b/po/sr_RS@cyrillic.po
@@ -15131,6 +15131,11 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Грешка у синтакси"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+msgid "End of line"
+msgstr "&Додај у омиљене..."
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr ""
