--- a/po/sr_RS@latin.po
+++ b/po/sr_RS@latin.po
@@ -15272,6 +15272,11 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Greška u sintaksi"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+msgid "End of line"
+msgstr "&Dodaj u omiljene..."
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr ""
