--- a/po/sv.po
+++ b/po/sv.po
@@ -15515,6 +15515,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Syntaxfel\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Filslut.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "Markörstorlek"
