--- a/po/th.po
+++ b/po/th.po
@@ -14611,6 +14611,11 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr ""
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+msgid "End of line"
+msgstr "ลบ\tDel"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr ""
