--- a/po/tr.po
+++ b/po/tr.po
@@ -14607,6 +14607,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "Sözdizimi hatası\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "Dosya sonu.\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "İmleç boyutu"
