--- a/po/wa.po
+++ b/po/wa.po
@@ -14505,6 +14505,11 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr ""
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+msgid "End of line"
+msgstr "&Rafacer\tDel"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr ""
