--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -14441,6 +14441,12 @@ msgstr ""
 msgid "Syntax error: unexpected %1\n"
 msgstr "語法錯誤\n"
 
+#: programs/cmd/cmd.rc:412
+#, fuzzy
+#| msgid "End of file.\n"
+msgid "End of line"
+msgstr "檔案結尾。\n"
+
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
 msgstr "游標大小"
