--- a/po/lt.po
+++ b/po/lt.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Wine\n"
 "Report-Msgid-Bugs-To: https://bugs.winehq.org\n"
 "POT-Creation-Date: N/A\n"
-"PO-Revision-Date: 2024-06-25 00:23+0300\n"
+"PO-Revision-Date: 2024-06-27 08:36+0300\n"
 "Last-Translator: Aurimas Fišeras <aurimas@members.fsf.org>\n"
 "Language-Team: Lithuanian <komp_lt@konf.lt>\n"
 "Language: lt\n"
@@ -14586,10 +14586,8 @@ msgid "Syntax error: unexpected %1\n"
 msgstr "Sintaksės klaida: netikėtas %1\n"
 
 #: programs/cmd/cmd.rc:412
-#, fuzzy
-#| msgid "End of file.\n"
 msgid "End of line"
-msgstr "Failo pabaiga.\n"
+msgstr "Eilutės pabaiga"
 
 #: programs/conhost/conhost.rc:54
 msgid "Cursor size"
