--- a/AUTHORS
+++ b/AUTHORS
@@ -1203,6 +1203,7 @@ Matthew Robertson
 Matthew Tran
 Matthias Derer
 Matthias Fechner
+Matthias Gorzellik
 Matthias Kupfer
 Matt Jones
 Matt Robinson
