--- a/AUTHORS
+++ b/AUTHORS
@@ -676,6 +676,7 @@ Henri Verbeet
 Henry Goffin
 Henry Kroll III
 Herbert Rosmanith
+Herman Semenov
 Hermès Bélusca-Maïto
 Hernan Rajchert
 Hervé Chanal
